--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-pip==19.2.3
-bump2version==0.5.11
-wheel==0.33.6
-watchdog==0.9.0
-flake8==3.7.8
-tox==3.14.0
-coverage==4.5.4
-Sphinx==1.8.5
-twine==1.14.0
-
-pytest==4.6.5
-pytest-runner==5.1
+flake8==3.7.9
+codecov==2.0.15
+coverage==5.0.3
+sphinx==2.3.1
+beautifulsoup4==4.8.2
