--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,9 @@
-[bumpversion]
-current_version = 0.1.0
-commit = True
-tag = True
-
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
-
-[bumpversion:file:pyeo/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
-
-[bdist_wheel]
+[wheel]
 universal = 1
 
 [flake8]
-exclude = docs
+ignore =
+max-line-length = 120
+max-complexity = 10
 
-[aliases]
-# Define setup.py command aliases here
-test = pytest
-
-[tool:pytest]
-collect_ignore = ['setup.py']
-
+extensions = ['recommonmark']
